...
        
        
    }
    
    @IBAction private func showAlertVC(_ sender: UIButton) {
        let vc = UIAlertController(title: "Title", message: "Message", preferredStyle: .actionSheet)
        let cancelAction = UIAlertAction(title: "Cancel", style: .cancel, handler: nil)
        let okAction = UIAlertAction(title: "OK", style: .default) { _ in
            //print("OK")
        }
        vc.addAction(okAction)
        vc.addAction(cancelAction)
        
        if Device.isIpad {
...
