...
            return nil
            #else
            /// "return nil" will focus cell
            return ProductDetailController(item: item)
            #endif
        }, actionProvider: { _ in
            let shareAction = UIAction(title: "Share", image: UIImage(systemName: "square.and.arrow.up")) { _ in
                delegate.photoCell(cell: self, didShare: item)
            }
            return UIMenu(title: "", children: [shareAction])
        })
    }
    
...
